--- a/prosjekt3-gruppe42/package.json
+++ b/prosjekt3-gruppe42/package.json
@@ -13,6 +13,8 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-navigation": "^1.1.487",
+    "react-native-paper": "^2.0.1",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0"
   }
 }
