--- a/prosjekt3-gruppe42/package.json
+++ b/prosjekt3-gruppe42/package.json
@@ -16,5 +16,15 @@
     "react-native-paper": "^2.0.1",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0"
-  }
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "jest-expo": "^30.0.0"
+    },
+    "scripts": {
+      "test": "node_modules/.bin/jest"
+    },
+    "jest": {
+      "preset": "jest-expo"
+    }
 }
